Fix CSS layout issues in reports.

--- a/reports/reports.css
+++ b/reports/reports.css
@@ -1,6 +1,12 @@
 body {
   padding-top: 56px;
+  overflow: hidden;
 }
+
+.container-fluid {
+  padding: 0;
+}
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
